# real_estate

./: .gitignore  README.md  compose.yml  db_insert.py  main.py  package-lock.json  pyproject.toml  visualization.py
data/: realestate.db
