[project]
name = "real-estate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "altair>=5.5.0",
    "asyncio>=4.0.0",
    "dash>=3.2.0",
    "duckdb[cli]>=1.3.2",
    "fastapi[standard]>=0.116.1",
    "geopy[aiohttp]>=2.4.1",
    "opencage>=3.2.0",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "py-spy>=0.4.1",
    "ruff>=0.12.12",
    "sqlmodel>=0.0.24",
    "streamlit>=1.47.1",
    "tool>=0.8.0",
    "vega-datasets>=0.9.0",
]
